--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<meta http-equiv="refresh" content="2;url=https://vishalparekh-portfolio-dfa42af4c7dd.herokuapp.com/" />
+<!DOCTYPE html> 
+<html> 
+<head> 
+<title>Vishal-Parekh-Portfolio</title> 
+<meta name="viewport" content="width=device-width, initial-scale=1"> 
+</head> 
+<body> 
+<iframe src="https://vishalparekh-portfolio-dfa42af4c7dd.herokuapp.com/" width="100%" height="800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe> 
+</body> 
+</html>
