--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html> 
 <head> 
 <title>Vishal-Parekh-Portfolio</title> 
-  <link rel="icon" href="favicon-32x32.png" sizes="32x32" /> 
+  <link rel="icon" href="/favicon-32x32.png" sizes="32x32" /> 
 <meta name="viewport" content="width=device-width, initial-scale=1"> 
 </head> 
 <body> 
